--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
             <h1
               class="pointer-events-none text-4xl md:text-[64px] font-['Spartan'] mr-12"
             >
-              Anurag Singh
+              Aravind Raj C K
             </h1>
             <p
               class="pointer-events-none font-['Merriweather'] italic my-4 md:my-8"
             >
-              MERN Stack Developer
+              Blockchain Developer
             </p>
             <button
               class="bg-[#4595eb] py-2 px-5 rounded font-extrabold bg-gradient-to-l from-[#1595b6] to-[#1f2667e6] relative hover:scale-110 ease-in-out duration-100 group"
@@ -231,7 +231,7 @@
         <ul class="ml-auto space-y-6 text-[#b0b2c3] absolute right-8">
           <li>
             <a
-              href="https://www.linkedin.com/in/anuragsinghbam/"
+              href="https://www.linkedin.com/in/aravindrajck/"
               target="_blank"
             >
               <svg
@@ -261,7 +261,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/procodrr/">
+            <a href="https://www.instagram.com/ck.aravind_raj/">
               <svg
                 class="w-7 hover:text-white"
                 xmlns="http://www.w3.org/2000/svg"
@@ -275,7 +275,7 @@
             </a>
           </li>
           <li>
-            <a href="mailto:anuragsinghbam@gmail.com" target="_blank">
+            <a href="mailto:ckaravindraj@gmail.com" target="_blank">
               <svg
                 class="w-7 hover:text-white"
                 xmlns="http://www.w3.org/2000/svg"
@@ -289,7 +289,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.youtube.com/@procodrr">
+            <a href="https://www.youtube.com/@ck.aravind_raj">
               <svg
                 class="w-7 hover:text-white"
                 xmlns="http://www.w3.org/2000/svg"
