updated pic and contact

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@ https://www.tooplate.com/view/2115-marvel
                         <p>A versatile developer with a deep passion for blockchain, AI, and cloud computing, focused on delivering cutting-edge solutions in fast-paced, challenging tech landscape</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="resume/aravind_resume_hyperledger.pdf" class="btn mr-lg-2 custom-btn" download>
+                            <i class='uil uil-file-alt'></i> Download Resume
+                          </a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
@@ -95,7 +97,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/undraw/undraw_software_engineer_lvl5.svg" class="img-fluid" alt="svg image">
+                        <img src="images/undraw/image-transparent_bg.png" class="img-fluid" alt="svg image">
                     </div>
                 </div>
 
@@ -111,7 +113,7 @@ https://www.tooplate.com/view/2115-marvel
                   <div class="col-lg-11 text-center mx-auto col-12">
 
                       <div class="col-lg-8 mx-auto">
-                        <h2>Things I have designed for digital media agencies</h2>
+                        <h2>Things I have Worked on</h2>
                       </div>
 
                       <div class="owl-carousel owl-theme">
@@ -220,14 +222,17 @@ https://www.tooplate.com/view/2115-marvel
                   <h3 class="mb-3 text-white">Contact</h3>
                   <p class="footer-text mb-0">+91-9597115285</p>
                   <p><a href="mailto:hello@company.co">ckaravindraj@gmail.com</a></p>
+                  <h3 class="mb-3 text-white">Social Links</h3>
+                  <p><a href="https://www.linkedin.com/in/aravindrajck/">Linkedin</a></p>
+                  <p><a href="https://github.com/Araj28196/">Github</a></p>
                 </div>
-
+                <!-- if needed icons with href
                 <ul class="social-links">
                   <li><a href="https://www.linkedin.com/in/aravindrajck/" class="uil uil-linkedin" data-toggle="tooltip" data-placement="left" title="LinkedIn"></a></li>
                   <li><a href="https://github.com/Araj28196" class="uil uil-github" data-toggle="tooltip" data-placement="left" title="GitHub"></a></li>
                   <li><a href="https://www.youtube.com/@ck.aravind_raj" class="uil uil-youtube" data-toggle="tooltip" data-placement="left" title="Youtube"></a></li>
               </ul>
-                            
+                -->            
             </div>
           </div>
 
@@ -261,7 +266,7 @@ https://www.tooplate.com/view/2115-marvel
       </div>
     </section>
 
-    <!-- FOOTER -->
+    <!-- FOOTER 
      <footer class="footer py-5">
           <div class="container">
                <div class="row">
@@ -274,7 +279,7 @@ https://www.tooplate.com/view/2115-marvel
                </div>
           </div>
      </footer>
-
+     -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
