--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://www.tooplate.com/view/2115-marvel
                         <p>A versatile developer with a deep passion for blockchain, AI, and cloud computing, focused on delivering cutting-edge solutions in fast-paced, challenging tech landscape</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="resume/aravind_resume_hyperledger.pdf" class="btn mr-lg-2 custom-btn" download>
+                          <a href="resume/aravind_resume.pdf" class="btn mr-lg-2 custom-btn" download>
                             <i class='uil uil-file-alt'></i> Download Resume
                           </a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
